--- a/web/conf/000-default.conf
+++ b/web/conf/000-default.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html 
-
+    DirectoryIndex index.shtml
    # ErrorLog /var/log/apache2/error.log
    # CustomLog /var/log/apache2/access.log combined
 
