--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 CTF_USER=ctfuser
 
 # Contenuto delle flag
-FLAG_ONE_CONTENT="FLAG_ONE{Metabase_Unauthenticated_RCE_to_Root}"
-FLAG_TWO_CONTENT="FLAG_TWO{LS_Hijack_To_Root_Shell}"
+FLAG_ONE_CONTENT="FLAG_ONE{08031P89_Unauthenticated_RCE_to_Root}"
+FLAG_TWO_CONTENT="FLAG_TWO{Try_T0_236909_1_Hijack_To_Root_Shell}"
 
 # Indirizzi IP e Subnet per i servizi
 # Subnet per la rete pubblica
