--- a/.env
+++ b/.env
@@ -3,23 +3,20 @@
 # Utente SSH per i server target
 CTF_USER=ctfuser
 
-# Contenuto delle flag
 FLAG_ONE_CONTENT="FLAG_ONE{08031P89_Unauthenticated_RCE_to_Root}"
 FLAG_TWO_CONTENT="FLAG_TWO{Try_T0_236909_1_Hijack_To_Root_Shell}"
 
 # Indirizzi IP e Subnet per i servizi
-# Subnet per la rete pubblica
-CTF_PUBLIC_SUBNET=192.168.31.0/24
-# Subnet per la rete privata
+# Subnet pubblic Network
+#CTF_PUBLIC_SUBNET=192.168.31.0/24
+# Subnet for private LAN
 CTF_PRIVATE_SUBNET=172.20.1.0/24
 
-# IP Pubblico per ssh-target-1 (accessibile dall'host)
-SSH_TARGET_1_PUBLIC_IP=192.168.31.3
-# IP Privato per ssh-target-1 (per pivotare)
+# IP for ssh-target-1 (to pivot)
 SSH_TARGET_1_PRIVATE_IP=172.20.1.10
-# IP Privato per ssh-target-2 (accessibile solo da ssh-target-1)
+# Privat IP  for ssh-target-2 
 SSH_TARGET_2_PRIVATE_IP=172.20.1.11
 
-# IP di riferimento per i web server (usati per assegnazione statica in docker-compose.yml)
-WEB_EXTERNAL_IP=192.168.31.4
-WEB_INTERNAL_IP=192.168.31.5
+# IP to web server 
+#WEB_EXTERNAL_IP=192.168.31.4
+#WEB_INTERNAL_IP=192.168.31.5
